demo/react-svc.yml
apiVersion: v1
kind: Service
metadata:
  name:  react-svc
spec:
  selector:
    app: react-app
  ports:
  - port: 80
    targetPort: 80
